fix pre tags causing horizontal scroll

--- a/css/splendor.css
+++ b/css/splendor.css
@@ -201,6 +201,7 @@ pre {
   font-size: .8rem;
   overflow-x: scroll;
   padding: 1.125em;
+  white-space: pre-wrap;
 }
 
 a,
